--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Николай Ботонов
 description: Web Developer from CEMI.online
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars3.githubusercontent.com/u/19997539?v=3&s=90
+avatar: 
 
 #
 # Flags below are optional
@@ -34,7 +34,7 @@ footer-links:
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus:@disqus_iysRfJGPfo
+disqus:disqus_iysRfJGPfo
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
